--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,5 +19,6 @@ jobs:
       - name: Install packages
         run: pip install -r requirements.txt
 
-      - name: Run tests
-        run: python manage.py test
+      - name: Git Bisect Run
+        GITHUB_SHA: ${{ github.sha }}
+        run: python myscript.py
