--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,5 +20,6 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Git Bisect Run
-        GITHUB_SHA: ${{ github.sha }}
+        env:
+          GITHUB_SHA: ${{ github.sha }}
         run: python myscript.py
